Fixes dropdown not showing in new messages

--- a/css/style.css
+++ b/css/style.css
@@ -273,8 +273,8 @@ h5{
   margin: 0 20px;
 }
 
-.dropdown:focus .dropdown-menu {
- display: block;
+.dropdown-menu.show {
+  display: block;
 }
 
 .dropdown{
